[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -400.0
margin_right = 300.0
margin_bottom = 540.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 50

[node name="Title" type="Label" parent="VBox"]
margin_right = 679.0
margin_bottom = 66.0
text = "A Cursed House"
align = 1

[node name="NewGame" type="Button" parent="VBox"]
margin_top = 116.0
margin_right = 679.0
margin_bottom = 188.0
text = "New Game"

[node name="Options" type="Button" parent="VBox"]
margin_top = 238.0
margin_right = 679.0
margin_bottom = 310.0
text = "Options"

[node name="Controls" type="Button" parent="VBox"]
visible = false
margin_top = 360.0
margin_right = 600.0
margin_bottom = 432.0

[node name="EmptyLabel" type="Label" parent="VBox"]
margin_top = 360.0
margin_right = 679.0
margin_bottom = 426.0

[node name="Credits" type="Label" parent="VBox"]
margin_top = 476.0
margin_right = 679.0
margin_bottom = 542.0
text = "SFX from https://soundeffect-lab.info/"

[connection signal="button_up" from="VBox/NewGame" to="." method="_on_NewGame_button_up"]
[connection signal="button_up" from="VBox/Options" to="." method="_on_Options_button_up"]
